--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,24 @@ spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.h2.console.enable=true
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+
+
+resilience4j.retry.instances.sample-api.maxAttempts=5 
+#resilience4j.retry.instances.sample-api.maxRetryAttempts=5 #OLD
+
+resilience4j.retry.instances.sample-api.waitDuration=1s
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+#resilience4j.circuitbreaker.instances.default.failureRateThreshold=90
+resilience4j.ratelimiter.instances.default.limitForPeriod=2
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+resilience4j.bulkhead.instances.default.maxConcurrentCalls=10
+resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
+
+
+
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
